[package]
name = "today_tmp"
version = "1.0.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"
description = "A scratch directory for each day"
readme = "README.md"
repository = "https://github.com/9999years/today_tmp"
license-file = "LICENSE.md"
keywords = ["git", "temporary files"]  # free text
categories = ["command-line-utilities", "development-tools"]  # https://crates.io/category_slugs
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "today_tmp"
path = "src/main.rs"
doc = false

[dependencies]
color-eyre = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
structopt = "0.3"
chrono = "0.4"
once_cell = "1.8"
# serde = { version = "1", features = ["derive"] }
# config = { version = "0", features = ["hjson"] }  # also supports ini, yaml
# termcolor = "1"
# dialoguer = "0"
# fuzzy-matcher = "0"  # fuzzy string-matching
# tabwriter = "1"  # tab-aligned printing
# regex = "1"
# cmd_lib = "0"
# float-cmp = "0"
# maplit = "1"
# auto_enums = "0"  # return multiple types from the same fn
# derive_builder = "0"
# wyz = "0"  # myrrlyn's utils
# derivative = "2"
# derive_more = "0"
# fasteval = "0"  # calculator language

[dev-dependencies]
pretty_assertions = "0"
indoc = "1"
